@startuml ER
left to right direction
skinparam linetype ortho

' ===== 見た目統一設定 =====
skinparam defaultFontName "Consolas","MS Gothic"
skinparam defaultFontSize 11
skinparam dpi 200
skinparam shadowing false
skinparam roundcorner 8
skinparam entityAttributeFontSize 11
skinparam entityFontSize 12
hide circle
' ==========================

' users テーブル
entity "users" as users {
  *id : bigint unsigned
  --
  name : varchar
  email : varchar
  email_verified_at : timestamp
  password : varchar
  remember_token : varchar
  avatar_path : varchar
  postal_code : varchar
  address : varchar
  building : varchar
  created_at : timestamp
  updated_at : timestamp
}

' items テーブル
entity "items" as items {
  *id : bigint unsigned
  --
  user_id : bigint unsigned
  name : varchar
  brand : varchar
  description : text
  price : int unsigned
  category : tinyint unsigned
  condition : tinyint unsigned
  is_sold : boolean
  created_at : timestamp
  updated_at : timestamp
}

' item_images テーブル
entity "item_images" as item_images {
  *id : bigint unsigned
  --
  item_id : bigint unsigned
  path : varchar
  is_main : boolean
  created_at : timestamp
  updated_at : timestamp
}

' likes テーブル
entity "likes" as likes {
  *id : bigint unsigned
  --
  user_id : bigint unsigned
  item_id : bigint unsigned
  created_at : timestamp
  updated_at : timestamp
}

' comments テーブル
entity "comments" as comments {
  *id : bigint unsigned
  --
  user_id : bigint unsigned
  item_id : bigint unsigned
  body : text
  created_at : timestamp
  updated_at : timestamp
}

' orders テーブル
entity "orders" as orders {
  *id : bigint unsigned
  --
  user_id : bigint unsigned
  item_id : bigint unsigned
  price : int unsigned
  payment_method : tinyint unsigned
  shipping_postal_code : varchar
  shipping_address : varchar
  shipping_building : varchar
  status : tinyint unsigned
  created_at : timestamp
  updated_at : timestamp
}

' リレーション
users ||--o{ items

items ||--o{ item_images
items ||--o{ likes
items ||--o{ comments
items ||--o| orders

users ||--o{ likes
users ||--o{ comments
users ||--o{ orders

' レイアウト補正
items       -[hidden]down- item_images
item_images -[hidden]-     likes
likes       -[hidden]-     comments
comments    -[hidden]-     orders

@enduml